<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gewichtheben Bundesliga</string>

    <!-- Settings -->
    <string name="settings">Einstellungen</string>
    <string name="filter_notifications">Wenn Sie nur über bestimmte Wettkämpfe oder Platzierungen informiert werden wollen, so können Sie hier Ihre Lieblings-Liga bzw. Ihren Lieblings-Club festlegen.</string>
    <string name="i_want_to">Ich möchte …</string>
    <string name="no_favorites">über alle Wettkämpfe und Platzierungen</string>
    <string name="all_competitions_and_placings">alle Wettkämpfe und Platzierungen</string>
    <string name="favorite_relay">nur über die Liga</string>
    <string name="favorite_club">nur über den Club</string>
    <string name="be_notified_about" translatable="false">… benachrichtigt werden.</string>
    <string name="saved_no_filter">Einstellungen gespeichert. Sie werden zukünftig über alle Ereignisse informiert.</string>
    <string name="saved_club_filter">Einstellungen gespeichert. Sie werden zukünftig nur noch über die Mannschaft "%1$s" informiert.</string>
    <string name="saved_relay_filter">Einstellungen gespeichert. Sie werden zukünftig nur noch über die %1$s informiert.</string>

    <string name="saved_all_blogs">Einstellungen gespeichert. Sie werden zukünftig über alle Artikel der aufgelisteten Vereinen informiert.</string>
    <string name="saved_no_blogs">Einstellungen gespeichert. Sie werden zukünftig über keine Artikel informiert.</string>
    <plurals name="saved_chosen_blogs">
        <item quantity="one">Einstellungen gespeichert. Sie werden zukünftig nur über Artikel des Vereins %s informiert.</item>
        <item quantity="other">Einstellungen gespeichert. Sie werden zukünftig nur über Artikel der Vereine %s informiert.</item>
    </plurals>

    <!-- Refreshing -->
    <string name="refresh">Aktualisieren</string>
    <string name="updated_all_successfully">Inhalte wurden erfolgreich synchronisiert</string>
    <string name="updated_all_unsuccessfully">Nicht alle Inhalte konnten synchronisiert werden. Besteht eine Internetverbindung?</string>
    <plurals name="new_elements">
        <item quantity="zero">Kein neues oder geändertes Element gefunden</item>
        <item quantity="one">%d neues/geändertes Element gefunden</item>
        <item quantity="other">%d neue/geänderte Elemente gefunden</item>
    </plurals>

    <!-- Navigation -->
    <string name="nav_home">Startseite</string>
    <string name="nav_news">Neuigkeiten</string>
    <string name="nav_buli_1A">Staffel A</string>
    <string name="nav_buli_1B">Staffel B</string>
    <string name="nav_buli_2North">Staffel Nordost</string>
    <string name="nav_buli_2Middle">Staffel Mitte</string>
    <string name="nav_buli_2South">Staffel Südwest</string>
    <string name="nav_buli">Bundesliga</string>
    <string name="nav_archive">Archiv</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_info">Info</string>


    <!-- Home -->
    <string name="home_welcome">Willkommen</string>
    <string name="home_text">Die nächsten Wettkämpfe entsprechend ihrer Filtereinstellungen</string>
    <string name="home_no_schedules">Es konnten keine Ansetzungen gefunden werden, die Ihren Fitereinstellungen entsprechen.</string>

    <!-- News -->
    <string name="news_error_heading">Something went wrong</string>
    <string name="news_error_content">This shouldn\'t happen, please go back and try again. Restart the app if that doesn\'t solve the issue.</string>
    <string name="news_article_url">Link zum Artikel</string>
    <string name="news_no_articles_internet">Es konnten keine Artikel gefunden werden. Besteht eine Internetverbindung?</string>
    <string name="news_no_articles_settings">Es konnten keine Artikel gefunden werden. Bitte wählen Sie in den Einstellungen aus, welche Vereine Sie interessieren. Um zu den Einstellungen zu gelangen, können Sie hier klicken.</string>

    <!-- Bundesliga -->
    <string name="buli_1A">1. Bundesliga - Staffel A</string>
    <string name="buli_1B">1. Bundesliga - Staffel B</string>
    <string name="buli_2North">2. Bundesliga - Staffel Nordost</string>
    <string name="buli_2Middle">2. Bundesliga - Staffel Mitte</string>
    <string name="buli_2South">2. Bundesliga - Staffel Südwest</string>

    <string name="buli_schedule">Ansetzungen</string>
    <string name="buli_no_schedules">Es konnten keine Ansetzungen gefunden werden.</string>
    <string name="buli_schedule_vs">vs.</string>
    <string name="buli_schedule_date_at">Am</string>
    <string name="buli_schedule_time_at">um</string>
    <string name="buli_schedule_location_in">In</string>
    <string name="buli_competitions">Wettkämpfe</string>
    <string name="buli_no_competitions">Es konnten keine Wettkämpfe gefunden werden.</string>
    <string name="buli_table">Tabelle</string>
    <string name="buli_no_tables">Es konnten keine Tabellenergebnisse gefunden werden.</string>
    <string name="buli_relative_points">Relativpunkte</string>
    <string name="buli_place">Platz</string>
    <string name="buli_max_score">Höchstpunktzahl</string>
    <string name="buli_points">Punkte</string>
    <string name="buli_print_too_old">Dein Gerät unterstützt diese Funktion leider nicht. Es wird mindestens Android 4.4 (KitKat) benötigt. Sorry …</string>

    <!-- FAQs -->
    <string name="faq_off_signal_heading">Ab-Zeichen</string>
    <string name="faq_off_signal_question">Wann darf das Ab-Zeichen gegeben werden?</string>
    <string name="faq_off_signal_answer">Der Athlet muss die Last auf ausgestreckten Armen und Beinen halten und dabei vollständig bewegungslos sein. Hat er einen Regelverstoß begangen, wie z.B. beim "Nachdrücken" im Ausstoßen, so wird das Signal ebenfalls gegeben.</string>

    <string name="faq_bad_attempt_jerking_heading">Ungültiger Stoß-Versuch</string>
    <string name="faq_bad_attempt_jerking_question">Wann ist ein Versuch im Stoßen ungültig?</string>
    <string name="faq_bad_attempt_jerking_answer">Bei folgenden Bewegungen ist der Stoß-Versuch als ungültig zu bewerten:\n - ein anderes Körperteil als die Füße berühren den Boden\n - die Ellenbogen berühren beim Umsetzen die Knie\n - beim Ausstoßen werden die Arme nicht in einer Bewegung gestreckt ("Nachdrücken")</string>

    <string name="winner_team_competition_heading">Sieger eines Mannschafts-Wettkampfes</string>
    <string name="winner_team_competition_question">Wer ist Sieger eines Mannschafts-Wettkampfes?</string>
    <string name="winner_team_competition_answer">Sieger eines Mannschafts–Wettkampfes (z.B. eines Bundesliga–Kampfes) ist das Team, das die meisten Relativpunkte in die Bewertung einbringen kann.\nJedem Athleten wird relativ zu seinem Körpergewichtes ein Wert zugeordnet. Dieser Wert wird sowohl von der größten erreichten Last im Reißen wie auch im Stoßen abgezogen (daher: Relativabzug).\nEinem Athleten mit einem Körpergewicht von 80kg wird beispielsweise ein Abzug von 80 Punkten zugeordnet. Reißt dieser Athlet 130kg und stößt 150kg, so erhält er 130+150–2*80 = 280–160 = 120 Relativpunkte. Diese werden mit den Relativpunkten seiner Mannschaftskameraden addiert. Das Team mit den meisten Relativpunkten gewinnt den Mannschafts-Wettkampf.</string>

    <string name="winner_single_competition_heading">Sieger eines Einzel-Wettkampfes</string>
    <string name="winner_single_competition_question">Wer ist Sieger eines Einzel-Wettkampfes?</string>
    <string name="winner_single_competition_answer">Sieger eines Einzel-Wettkampfes (z.B. einer Deutschen Meisterschaft) in seiner Gewichtsklasse ist der Sportler, der das höchste Zweikampf-Ergebnis erzielt.\nEinem Athleten mit einem Körpergewicht von 80kg wird dabei die Gewichtsklasse -85kg zugeordnet. Reißt dieser 130kg und stößt 150kg, so hat er ein Zweikampf-Ergebnis von 280kg erbracht. Erbringt kein anderer Athlet dieser Gewichtsklasse ein höheres Ergebnis, so ist der Athlet Sieger der Gewichtsklasse -85kg im Olympischen Zweikampf. Bei größeren Meisterschaften werden auch das Reißen und das Stoßen mit Medaillen geehrt.</string>

    <!-- Contact -->
    <string name="contact_app_developer">App-Developer</string>
    <string name="contact_app_developer_name">Willi Gierke</string>
    <string name="contact_app_developer_email_key">Email</string>
    <string name="contact_app_developer_email_value">willi.gierke@student.hpi.de</string>
    <string name="contact_linkedin_key">LinkedIn-Profil</string>
    <string name="contact_linkedin_value">linkedin.com/in/willi-gierke-5221a7b5</string>
    <string name="contact_database">Datenbank</string>
    <string name="contact_database_key">IAT Leipzig</string>
    <string name="contact_database_value">www.iat.uni-leipzig.de/service/kontakt-zum-iat</string>
    <string name="disclaimer_content_text">Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="disclaimer_content_key">Haftung für Inhalte</string>
    <string name="disclaimer_links_key">Haftung für Links</string>
    <string name="disclaimer_links_text">Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
    <string name="disclaimer_source_key">Quelle:</string>
    <string name="disclaimer_source_text">e-recht24.de</string>
    <string name="updating_in_progress">Update-Prozess wurde bereits gestartet.</string>
    <string name="error_network">Netzwerkfehler. Sind Sie online?</string>
    <string name="loading_data">Lade aktuellste Daten …</string>
    <string name="buli_protocol">Protokoll</string>
    <string name="share_this">Teilen</string>
    <string name="settingsAnd">... und ...</string>
    <string name="allClubNews">über alle Vereins-Neuigkeiten</string>
    <string name="settings_news_only_about">nur über</string>
    <string name="settings_news_none">über keine Vereine</string>
    <string name="firstNationalLeague">1. Bundesliga</string>
    <string name="secondNationalLeague">2. Bundesliga</string>
    <string name="contact">Kontakt</string>

</resources>

